[package]
name = "rustzx"
description = "ZX Spectrum emulator"
readme = "../README.md"
keywords = ["emulator", "game", "z80"]

version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0.36", features = [
  "unsafe_textures",
  "bundled",
  "static-link",
] }
rustzx-core = { workspace = true, features = ["full"] }
rustzx-utils = { workspace = true, features = ["std"] }
log = "0.4"
anyhow = "1.0"
structopt = "0.3"
strum = { version = "0.22", default-features = false, features = [
  "derive",
  "std",
] }
simple_logger = "2"
cpal = { version = "0.16", default-features = false, optional = true }
ringbuf = { version = "0.3" }
# GUI (egui) overlay; disable with --no-default-features --features sound-cpal for SDL-only build
egui_sdl2_gl = { version = "0.33", optional = true }
egui-file-dialog = { version = "0.12.0", optional = true }
# OpenGL for video backend when building without egui
gl = "0.14"

[features]
default = ["sound-cpal", "gui"]
# cpal requires ALSA development headers on Linux
sound-cpal = ["cpal"]
# egui overlay (settings, file dialogs); disable for SDL-only build and potentially better audio
gui = ["egui_sdl2_gl", "egui-file-dialog"]
# SDL-only build (no egui): cargo build --no-default-features --features sound-cpal


#[dev-dependencies]
#cmake = "0.1.48"
